--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,59 @@
 html {
-    
+    --background-color: rgba(27, 26, 29, 1);
+    --middleground-color: rgba(43, 45, 46, 1);
+    --foreground-color: rgba(61, 63, 65, 1);
+
+    --background-color-translucent: rgba(27, 26, 29, 0.7);
+    --middleground-color-translucent: rgba(43, 45, 46, 0.7);
+    --foreground-color-translucent: rgba(61, 63, 65, 0.7);
+    --accent-color: rgb(63, 140, 251);
+
+    --primary-text-color: rgb(255, 255, 255);
+    --secondary-text-color: rgb(168, 169, 169);
+    --tertiary-text-color: rgb(112, 112, 114);
+
+    --border-radius-xsmall: 4px;
+    --border-radius-small: 8px;
+    --border-radius-medium: 12px;
+    --border-radius-large: 20px;
+    --border-radius-xlarge: 20px;
+
+    --font-size-xsmall: 10px;
+    --font-size-small: 12px;
+    --font-size-medium: 14px;
+    --font-size-large: 18px;
+    --font-size-xlarge: 22px;
+    --font-size-xxlarge: 28px;
+
+    --font-weight-light: 300;
+    --font-weight-normal: 400;
+    --font-weight-medium: 500;
+    --font-weight-bold: 600;
+    --font-weight-xbold: 700;
+
+    --padding-xsmall: 2px;
+    --padding-small: 4px;
+    --padding-medium: 8px;
+    --padding-large: 16px;
+    --padding-xlarge: 24px;
+
+    --profile-picture-size-small: 40px;
+    --profile-picture-size-medium: 64px;
+    --profile-picture-size-large: 96px;
+    --profile-picture-size-extra-large: 192px;
+}
+
+body, html {
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 body {
+    width: 100%;
     display: flex;
     flex-direction: row;
+
+    background-color: var(--background-color);
+    color: var(--primary-text-color);
 }
