--- a/components/Post.tsx/Head.module.css
+++ b/components/Post.tsx/Head.module.css
@@ -1,4 +1,41 @@
 .head {
     display: flex;
     flex-direction: row;
+    padding: 2px 6px 12px 6px;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.headLeft {
+    display: flex;
+    flex-direction: row;
+}
+
+.icon {
+    display: flexbox;
+    align-items: center;
+    justify-content: center;
+    width: min-content;
+    height: min-content;
+    border-radius: 50%;
+    padding: 2px 0;
+    background-color: var(--foreground-color);
+}
+
+.details {
+    display: flex;
+    flex-direction: column;
+    padding: 6px 10px;
+    justify-content: space-between;
+}
+
+.name {
+    color: var(--primary-text-color);
+    font-size: var(--font-size-medium);
+    font-weight: var(--font-weight-bold);
+}
+
+.postedAt {
+    color: var(--secondary-text-color);
+    font-size: var(--font-size-small);
 }
