--- a/components/GridView/index.module.css
+++ b/components/GridView/index.module.css
@@ -3,17 +3,7 @@
     display: flex;
 }
 
-.grid {
-    width: 100%;
-    display: grid;
-    grid-template-columns: 1fr 1fr ;
-    /* align-items: flex-start; */
-}
-
-.post {
-    display: flex;
-    width: 100%;
-    height: min-content;
-    padding: 10px;
-    box-sizing: border-box;
+.grid { 
+  display: flex;
+  width: auto;
 }
