--- a/components/User/index.module.css
+++ b/components/User/index.module.css
@@ -10,3 +10,9 @@
     /* height: 100%; */
     padding: 24px 16px 0;
 }
+
+@media (max-width: 480px) {
+    .container{
+        flex-direction: column;
+    }
+}
