--- a/app/user/[username]/index.module.css
+++ b/app/user/[username]/index.module.css
@@ -3,5 +3,8 @@
     flex-direction: column;
     width: 100%;
     align-items: center;
-    /* justify-content: center; */
+}
+
+.infiniteScroll{
+    min-width: 100%;
 }
