--- a/components/Post/Head.module.css
+++ b/components/Post/Head.module.css
@@ -11,6 +11,10 @@
     flex-direction: row;
 }
 
+.headLeft:hover {
+    cursor: pointer;
+}
+
 .icon {
     display: flexbox;
     align-items: center;
