--- a/app/globals.css
+++ b/app/globals.css
@@ -3,9 +3,9 @@ html {
     --middleground-color: rgba(43, 45, 46, 1);
     --foreground-color: rgba(61, 63, 65, 1);
 
-    --background-color-translucent: rgba(27, 26, 29, 0.7);
-    --middleground-color-translucent: rgba(43, 45, 46, 0.7);
-    --foreground-color-translucent: rgba(61, 63, 65, 0.7);
+    --background-color-translucent: rgba(27, 26, 29, 0.84);
+    --middleground-color-translucent: rgba(43, 45, 46, 0.84);
+    --foreground-color-translucent: rgba(61, 63, 65, 0.84);
     --accent-color: rgb(63, 140, 251);
 
     --primary-text-color: rgb(255, 255, 255);
@@ -16,7 +16,7 @@ html {
     --border-radius-small: 8px;
     --border-radius-medium: 12px;
     --border-radius-large: 20px;
-    --border-radius-xlarge: 20px;
+    --border-radius-xlarge: 24px;
 
     --font-size-xsmall: 10px;
     --font-size-small: 12px;
@@ -24,6 +24,8 @@ html {
     --font-size-large: 18px;
     --font-size-xlarge: 22px;
     --font-size-xxlarge: 28px;
+    --font-size-xxxlarge: 36px;
+    --font-size-xxxxlarge: 48px;
 
     --font-weight-light: 300;
     --font-weight-normal: 400;
@@ -53,7 +55,10 @@ body {
     width: 100%;
     display: flex;
     flex-direction: row;
-
     background-color: var(--background-color);
     color: var(--primary-text-color);
+}
+
+.no-underline {
+    text-decoration: none;
 }
