--- a/components/User/UserStats/index.module.css
+++ b/components/User/UserStats/index.module.css
@@ -1,6 +1,7 @@
 .stats {
     display: flex;
     flex-direction: row;
+    width: 100%;
     height: 100%;
     justify-content: space-evenly;
     align-items: center;
@@ -18,3 +19,4 @@
     font-size: var(--font-size-small);
     color: var(--secondary-text-color);
 }
+
