--- a/components/User/index.module.css
+++ b/components/User/index.module.css
@@ -2,17 +2,25 @@
     display: flex;
     width: 100%;
     padding: 32px;
+
 }
 
 .details {
     display: flex;
     flex-direction: column;
     /* height: 100%; */
+    width: 100%;
     padding: 24px 16px 0;
 }
 
 @media (max-width: 480px) {
     .container{
         flex-direction: column;
+        align-items: center;
+    }
+
+    .details {
+        width: 80vw;
+        height: 128px;
     }
 }
