--- a/app/user/[username]/index.module.css
+++ b/app/user/[username]/index.module.css
@@ -1,10 +1,12 @@
 .container{
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: 90%;
     align-items: center;
 }
 
 .infiniteScroll{
-    min-width: 100%;
+    display: flex;
+    max-width: var(--page-width, 100%);
+    justify-content: center;
 }
