--- a/components/Post/index.module.css
+++ b/components/Post/index.module.css
@@ -2,6 +2,7 @@
     display: flexbox;
     /* width: calc(0.67*var(--page-width)); */
     width:100%;
+    height: 100%;
     flex-direction: column;
     border-radius: var(--border-radius-large);
     overflow: hidden;
