--- a/components/User/index.module.css
+++ b/components/User/index.module.css
@@ -2,7 +2,6 @@
     display: flex;
     width: 100%;
     padding: 32px;
-
 }
 
 .details {
@@ -17,6 +16,7 @@
     .container{
         flex-direction: column;
         align-items: center;
+        padding-bottom: 24px;
     }
 
     .details {
