--- a/public/StaticComps/index.module.css
+++ b/public/StaticComps/index.module.css
@@ -7,3 +7,13 @@
     font-size: var(--font-size-small);
     padding: 12px;
 }
+
+@media (max-width: 480px) {
+    .title {
+        font-size: var(--font-size-xxlarge);
+        padding: 16px 0 12px 0;
+        width: 100%;
+        text-align: center;
+        border-bottom: 2px solid var(--middleground-color);
+    }
+}
