--- a/components/GridView/index.module.css
+++ b/components/GridView/index.module.css
@@ -3,6 +3,10 @@
     max-width: var(--page-width, 100%);
     display: flex;
     flex-direction: column;
+    /* display: grid;
+    grid-template-columns: repeat(3, 1fr); */
+    /* column-size */
+
     align-items: center;
 }
 
