--- a/components/IconButton/index.module.css
+++ b/components/IconButton/index.module.css
@@ -4,7 +4,7 @@
     border-radius: var(--border-radius-small);
     padding: 4px 8px;
     border: 0;
-    font-size: var(--font-size-large);
+    font-size: var(--font-size-xlarge);
 }
 
 .iconButton:hover {
