--- a/components/PortraitLayout/index.module.css
+++ b/components/PortraitLayout/index.module.css
@@ -1,5 +1,6 @@
 .layout {
     --page-width: 100vw;
+    --top-bar-height: 64px;
 
     display: flex;
     flex-direction: column;
@@ -7,7 +8,21 @@
     width: 100%;
 }
 
+.topBar {
+    position: fixed;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-between;
+    /* margin: 0 16px; */
+    /* border-bottom: 2px solid var(--middleground-color); */
+    background-color: var(--middleground-color-translucent);
+    z-index: 100;
+    height: var(--top-bar-height);
+}
+
 .main {
+    margin-top: var(--top-bar-height);
     display: flex;
     flex-direction: column;
     align-items: center;
