--- a/public/StaticComps/index.module.css
+++ b/public/StaticComps/index.module.css
@@ -13,7 +13,7 @@
         font-size: var(--font-size-xxlarge);
         padding: 16px 0 12px 0;
         width: 100%;
-        text-align: center;
-        border-bottom: 2px solid var(--middleground-color);
+        /* text-align: left; */
+        padding-left: 16px;
     }
 }
